tests/NormalTests/paczka1/fuzzy1/33002861.err
Error in line 5: Zw0YLHp1 S788 10,7
Error in line 6: Zw0YLHp1 A386 9,3
Error in line 11: 0oDV8LZWhX A211 22,5
Error in line 22: ULBfdRPrpKo A386 56,4
